tests/assembler/fail/circular_macro.tal
%rec { rec }
|0100
    rec
